--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Arima+Madurai:wght@200&amp;family=Bungee&amp;family=Iceland&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="./genius_icon.webp">
 </head>
 <header>
     <div class="div__header">tes</div>
@@ -57,10 +58,12 @@
             <!--game__options-->
         </div>
         <!-- div game-->
-        <footer>frasse do final da pagina</footer>
+
     </div>
     <!-- Classe container-->
     <script src="js/scripts.js"></script>
 </body>
+<footer> DESENVOLVIDO POR <a href="https://github.com/ViniciusF-Pereira" target="_blank"><span> VINICIUS DE FREITAS</span></a></div>
+</footer>
 
 </html>
