--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <!-- Classe container-->
     <script src="js/scripts.js"></script>
 </body>
-<footer> DESENVOLVIDO POR <a href="https://github.com/ViniciusF-Pereira" target="_blank"><span> VINICIUS DE FREITAS</span></a></div>
+<footer> DESENVOLVIDO PARA ESTUDO - <a href="https://github.com/ViniciusF-Pereira" target="_blank"><span> VINICIUS DE FREITAS</span></a></div>
 </footer>
 
 </html>
